# turtlebot3_2022

devel/: .catkin  .rosinstall  _setup_util.py
devel/include/oroca_ros_tutorials/: msgTutorial.h
devel/lib/my_first_ros_pkg/: hello_world_node
devel/lib/oroca_ros_tutorials/: ros_tutorial_msg_publisher  ros_tutorial_msg_subscriber
devel/lib/pkgconfig/: cuty_sexy_dachshund.pc  fucking_obstacle.pc  gogo_test.pc  my_first_ros_pkg.pc  oroca_ros_tutorials.pc  publish_led_test.pc  rospy_tutorial.pc  super_test.pc  super_turtle.pc  test_wiringpi_ros.pc
devel/lib/test_wiringpi_ros/: test_wiringpi_ros
src/: CMakeLists.txt
src/cuty_sexy_dachshund/: CMakeLists.txt
src/cuty_sexy_dachshund/scripts/: dachshund.py
src/fucking_obstacle/: CMakeLists.txt  package.xml
src/fucking_obstacle/scripts/: fucking_obstacle.py
src/gogo_test/: CMakeLists.txt  package.xml
src/gogo_test/launch/: gogo_test.launch
src/gogo_test/scripts/: gogo_test.py
src/my_first_ros_pkd/src/: hello_world_node.cpp
src/oroca_ros_tutorials/: CMakeLists.txt  package.xml
src/oroca_ros_tutorials/src/: ros_tutorial_msg_publisher.cpp  ros_tutorial_msg_subscriber.cpp
src/publish_led_test/: CMakeLists.txt  package.xml
src/publish_led_test/scripts/: led_test.py  led_test_one.py
src/rospy_tutorial/: CMakeLists.txt  package.xml
src/super_test/: CMakeLists.txt
src/super_turtle/: CMakeLists.txt  package.xml
src/test_wiringpi_ros/: CMakeLists.txt
src/test_wiringpi_ros/include/wiringPi/: libwiringPi.so.2.70
src/test_wiringpi_ros/src/: test_wiringpi_ros.cpp
(+17 files in other folders)
